--- a/Report_DEL1.ipynb
+++ b/Report_DEL1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 83,
    "id": "eaee9f3c",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "id": "8e5a0513",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "2   3   59   F   169.9    82.2        151.7         6.16     No        0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "id": "e4f657a4",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 86,
    "id": "8b6a29d3",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 87,
    "id": "d3fdd59c",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 88,
    "id": "feeed1f3",
    "metadata": {},
    "outputs": [
@@ -232,11 +232,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "00db9206",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Andel med sjukdom: 0.06\n"
+     ]
+    }
+   ],
+   "source": [
+    "with_disease = df[\"disease\"].sum()\n",
+    "amount_people = len(df[\"disease\"])\n",
+    "part = with_disease / amount_people\n",
+    "\n",
+    "print(\"Andel med sjukdom:\", round(part, 2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "386b9557",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Andelen som är sjuka i simuleringen är: 0.056\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "\n",
+    "simulated = np.random.choice(\n",
+    "    [0, 1],                \n",
+    "    size=1000,             \n",
+    "    p=[1 - part, part]   \n",
+    ")\n",
+    "\n",
+    "numwdisease = np.sum(simulated)\n",
+    "numpeople = len(simulated)\n",
+    "numsimulated = numwdisease / numpeople\n",
+    "\n",
+    "print(\"Andelen som är sjuka i simuleringen är:\", round(numsimulated, 3))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e37d3f7c",
+   "metadata": {},
+   "source": [
+    "Andelen som har sjukdomen är 6%, och i den simulerade versionen är det 5.6% som har sjukdomen."
+   ]
   }
  ],
  "metadata": {
